# synchronisation_buffer

./: CMakeLists.txt  README.md
src/: buffer.hpp  main.cpp  main.hpp
utils/: cmake_update.sh  cuda_uninstaller.sh  install_cmake.sh  install_opencv_with_cuda.sh  make.sh
